--- a/Read_data_with_markers-Copy1.ipynb
+++ b/Read_data_with_markers-Copy1.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 52,
    "id": "37a6f1c2-0525-4d76-90e9-b8b480e9180b",
    "metadata": {
     "tags": []
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 53,
    "id": "4b3d92d4-c0ca-4947-9c4e-4e69d31b883c",
    "metadata": {
     "tags": []
@@ -54,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/ordez/Downloads/BCI_ALS-main/synth_with_trig2.xdf\n"
+      "/Users/ordez/Documents/BCI_ALS/synth_with_trig2.xdf\n"
      ]
     }
    ],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 54,
    "id": "c7b10043-9dbd-45bf-9325-9311b6cf9962",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 55,
    "id": "b23e76ce-1899-40a5-bdc8-d337354d71c6",
    "metadata": {},
    "outputs": [
@@ -140,8 +140,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['18.903325377134024' '0.0' 'here']\n",
-      " ['29.251058248861227' '0.0' 'here']]\n"
+      "[['18.903325377134024' '0.0' '40']\n",
+      " ['29.251058248861227' '0.0' '45']]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: 'here'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [55]\u001b[0m, in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m (event)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# make sure no strings in marker\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m events \u001b[38;5;241m=\u001b[39m \u001b[43mevents\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mastype\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m events[:,\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m125\u001b[39m\n",
+      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'here'"
      ]
     }
    ],
@@ -152,22 +163,103 @@
     "\n",
     "zeros = np.zeros(len(marker_stream['time_series'])).reshape(2,1)\n",
     "# need to solve the string thing\n",
-    "event = np.concatenate((marker_stream['time_stamps'].reshape(2,1),zeros,np.array(marker_stream['time_series']).reshape(2,1)),axis = 1)\n",
-    "print (event)"
+    "events = np.concatenate((marker_stream['time_stamps'].reshape(2,1),zeros,np.array(marker_stream['time_series']).reshape(2,1)),axis = 1)\n",
+    "print (event)\n",
+    "# make sure no strings in marker\n",
+    "events = events.astype(float)\n",
+    "events[:,0] *= 125"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "5c2759ba-cc8d-4d22-8ce6-cd4d91311962",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"table table-hover table-striped table-sm table-responsive small\">\n",
+       "    <tr>\n",
+       "        <th>Measurement date</th>\n",
+       "        \n",
+       "        <td>Unknown</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Experimenter</th>\n",
+       "        \n",
+       "        <td>Unknown</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "        <th>Participant</th>\n",
+       "        \n",
+       "        <td>Unknown</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Digitized points</th>\n",
+       "        \n",
+       "        <td>16 points</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Good channels</th>\n",
+       "        <td>13 EEG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Bad channels</th>\n",
+       "        <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>EOG channels</th>\n",
+       "        <td>Not available</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>ECG channels</th>\n",
+       "        <td>Not available</td>\n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Sampling frequency</th>\n",
+       "        <td>250.00 Hz</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Highpass</th>\n",
+       "        <td>0.00 Hz</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Lowpass</th>\n",
+       "        <td>125.00 Hz</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    \n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Duration</th>\n",
+       "        <td>00:00:37 (HH:MM:SS)</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<RawArray | 13 x 9150 (36.6 s), ~953 kB, data loaded>"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mapping = {1: 'auditory/left', 2: 'auditory/right', 3: 'visual/left',\n",
-    "           4: 'visual/right', 5: 'smiley', 32: 'buttonpress'}\n",
+    "mapping = {40: 'first', 45: 'second'}\n",
+    "\n",
     "annot_from_events = mne.annotations_from_events(\n",
     "    events=events, event_desc=mapping, sfreq=raw.info['sfreq'],\n",
-    "    orig_time=raw.info['meas_date'])\n",
+    "    orig_time=None)\n",
+    "\n",
     "raw.set_annotations(annot_from_events)"
    ]
   },
@@ -295,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "67c3c2c9-c8bb-4ca5-b68d-ab770df84e2b",
    "metadata": {
     "tags": []
@@ -380,7 +472,7 @@
        ">"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "4a81a985-0cf5-40e9-a7c7-04029091dc89",
    "metadata": {
     "tags": []
@@ -428,7 +520,7 @@
        "<MNEBrowseFigure size 3582x1972 with 4 Axes>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
